fixed image size on mobile

--- a/static/styles/photo.css
+++ b/static/styles/photo.css
@@ -38,11 +38,11 @@ body {
     margin-left: 5%;
     display: flex;
     justify-content: flex-start;
-    height: 80vh;
 }
 
 img {
-    height: 100%;
+    height: 50vw;
+    max-height: 80vh;
     margin-right: 10px;
 }
 
@@ -63,9 +63,5 @@ img {
     #content {
         flex-wrap: wrap;
         justify-content: center;
-    }
-
-    img {
-        width: 90%;
     }
 }
